syntax = "proto3"; 

option csharp_namespace = "Masa.Workflow"; 

package masa.workflow; 

enum WorkflowStatus {
  Idle = 0;
  Running = 1;
  Finished = 2;
  Suspended = 3;
  Faulted = 4;
  Cancelled = 5; 
}

message WorkflowId{
	string id = 1;
}