syntax = "proto3"; 

option csharp_namespace = "Masa.Workflow"; 

package masa.workflow; 

import "google/protobuf/timestamp.proto"; 
import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "model.proto";

service WorkflowAgent
{
	rpc GetList (WorkflowListRequest) returns (WorkflowReply);

	rpc GetDetail (WorkflowId) returns (WorkflowDetail){
		option (google.api.http) = {
			get: "/v1/workflow/{id}"
		};
	}

	rpc GetDefinition (WorkflowId) returns (WorkflowDefinition){
		option (google.api.http) = {
			get: "/v1/workflow/{id}"
		};
	}

	rpc Save (WorkflowRequest) returns (WorkflowId);

	rpc Delete(WorkflowId) returns (google.protobuf.Empty){
		option (google.api.http) = {
			delete: "/v1/workflow/{id}"
		};
	}
} 

message WorkflowListRequest { 
	int32 page = 1; 
	int32 page_size = 2; 
	string name = 3;
} 

message WorkflowRequest { 
	string id = 1;
	string name = 2;
	string description = 3;
	bool is_draft = 4;
	bool disabled = 5;

	repeated Node nodes = 10;
} 

message WorkflowReply { 
	repeated WorkflowItem Workflows = 1; 
} 

message WorkflowItem { 
	string id = 1;
	WorkflowStatus status = 2;
	string name = 3; 
	bool is_publish = 4;

	google.protobuf.Timestamp create_dateTime_stamp = 10; 
	string create_user = 11;
	google.protobuf.Timestamp update_dateTime_stamp = 12; 
	string update_user = 13;
}

message WorkflowDetail { 
	string id = 1;  
	WorkflowStatus status = 2;
	string name = 3; 
	string description = 4; 
	map<string, string> environment_variables = 5;
	string json = 6;

	google.protobuf.Timestamp create_dateTime_stamp = 20; 
	string create_user = 21;
	google.protobuf.Timestamp update_dateTime_stamp = 22;
	string update_user = 23;
}

message WorkflowDefinition{
	string id = 1; 
	string name = 2; 
	map<string, string> environment_variables = 5;
	repeated Node nodes = 6;
}

message Node{
	string name = 1;
	string description = 2;
	bool disabled = 3;
	WireList wires = 10;
	string meta = 20;

	message WireList{
		message Wire {
			repeated string guids = 1;
		}
		repeated Wire guid_lists = 1;
	}
}

